Submit mini-project